kubernetes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-booking-quote-srv
  labels:
    app: hotel-booking-quote-srv
    tier: service
    version: v1
spec:
  selector:
    matchLabels:
      app: hotel-booking-quote-srv
  replicas: 2
  template:
    metadata:
      labels:
        app: hotel-booking-quote-srv
    spec:
      containers:
      - name: hotel-booking-quote-srv
        image: localhost:5000/hotel-booking-quote-srv
        ports:
        - containerPort: 8080
